# python-hs

./: .copilotignore  .gitignore  AGENTS.md  LICENSE  README.md  cabal.project  flake.nix  git-format.md  plans.md  python-hs.cabal
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: Main.hs
app/check-runner-case-coverage/: Main.hs
app/check-structure/: Main.hs
scripts/: run-test-with-diagnostics.sh
src/PythonHS/: CLI.hs  EvalProgram.hs  Evaluator.hs  RunSource.hs  RunSourceVm.hs  RunSourceVmWithSearchPaths.hs  Runner.hs
src/PythonHS/AST/: BinaryOperator.hs  Expr.hs  Pattern.hs  Program.hs  Stmt.hs
src/PythonHS/CLI/: ProcessSubmission.hs  ProcessVmSubmission.hs  ReplEvalLines.hs  RunFile.hs  StartRepl.hs
src/PythonHS/Evaluator/: Env.hs  EvalBuiltinExpr.hs  EvalCallExpr.hs  EvalExpr.hs  EvalExprBinary.hs  EvalForStmt.hs  EvalStatements.hs  EvalWhileStmt.hs  FuncEnv.hs  MaxLoopIterations.hs  RangeValues.hs  ShowPos.hs  Value.hs  ValueToOutput.hs  ValueToReplOutput.hs
src/PythonHS/Lexer/: KeywordOrIdentifier.hs  LexerError.hs  ParseExponent.hs  Position.hs  ScanTokenStep.hs  ScanTokens.hs  Token.hs  TokenType.hs
src/PythonHS/Parser/: ExprPos.hs  NormalizeFloatLiteral.hs  ParseAnnAssignStmt.hs  ParseCallArgument.hs  ParseClassStmt.hs  ParseComprehensionTail.hs  ParseDecoratedStmt.hs  ParseError.hs  ParseExceptSuites.hs  ParseExpr.hs  ParseIfTail.hs  ParseImportStmt.hs  ParseLambdaExpr.hs  ParseMatchStmt.hs  ParseParameters.hs  ParseParenTuple.hs  ParsePattern.hs  ParseProgram.hs  ParseStatement.hs  ParseSubscriptExpr.hs  ParseSuite.hs  ParseWalrusExpr.hs  ParseYieldStmt.hs
src/PythonHS/Runner/: ResolveRunnerEngine.hs  RunSourceWithEngine.hs  RunnerCaseCoverageHasMissing.hs  RunnerCaseCoverageReport.hs  RunnerEngine.hs
src/PythonHS/Structure/: CheckStructure.hs  CheckStructureViolations.hs  CheckStructureWarnings.hs
src/PythonHS/VM/: ApplyExceptionInstruction.hs  BindCallArguments.hs  BindDefaults.hs  BindPatternCaptures.hs  CallBuiltin.hs  CallCollectionBuiltin.hs  CallMathBuiltin.hs  CallStdlibBuiltin.hs  CollectExports.hs  CollectFunctionGlobalDecls.hs  CompileCallArgsAt.hs  CompileClassDefStmt.hs  CompileClassStmt.hs  CompileCompoundAssign.hs  CompileComprehensionClauses.hs  CompileDecoratedStmt.hs  CompileDecoratorApplications.hs  CompileDefaults.hs  CompileDictEntriesAt.hs  CompileExprAt.hs  CompileExprItemsAt.hs  CompileFunctionDefStmt.hs  CompileImportStmt.hs  CompileLogicalExpr.hs  CompileMatch.hs  CompileProgram.hs  CompileTryExcept.hs  CompileYieldCollectStmt.hs  EvalBinaryOp.hs  EvaluateBuiltinArgs.hs  EvaluateUserArgs.hs  ExecuteCallFunction.hs  ExecuteCallValueFunction.hs  ExecuteForNext.hs  ExecuteListComprehension.hs  ExecuteMatchPattern.hs  ExecutePendingExceptionInstruction.hs  ExecuteUnpackToNames.hs  ExprPosition.hs  FindMethodFunctionName.hs  (+24 more)
test/Test/Acceptance/: MvpScenarioSpec.hs
test/Test/CLI/: CLISpec.hs
test/Test/Eval/: EvalSpec.hs  FunctionEvalSpec.hs  RuntimeErrorSpec.hs
test/Test/Lexer/: ScanTokensCoreSpec.hs  ScanTokensIndentSpec.hs  ScanTokensSpec.hs
test/Test/Parser/: ParseProgramSpec.hs  ParserErrorSpec.hs
test/Test/Runner/: RunnerCaseCoverageHasMissingSpec.hs  RunnerCaseCoverageReportSpec.hs  RunnerCoreSpec.hs  RunnerEdgeSpec.hs  RunnerSpec.hs  RunnerVmParitySpec.hs
test/Test/Structure/: CheckStructureSpec.hs
test/Test/VM/: RunSourceVmSpec.hs
