cabal-version:      2.4
name:               python-hs
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:
      PythonHS.Lexer.TokenType
    , PythonHS.Lexer.Token
    , PythonHS.Lexer.LexerError
    , PythonHS.Lexer.ScanTokens
    , PythonHS.AST.BinaryOperator
    , PythonHS.AST.Expr
    , PythonHS.AST.Stmt
    , PythonHS.AST.Program
    , PythonHS.Lexer.Position
    , PythonHS.Parser.ParseError
    , PythonHS.Parser.ParseProgram
    , PythonHS.RunSource
    , PythonHS.RunSourceVm
    , PythonHS.RunSourceVmWithSearchPaths
    , PythonHS.Runner
    , PythonHS.Runner.RunnerCaseCoverageHasMissing
    , PythonHS.Runner.RunnerCaseCoverageReport
    , PythonHS.EvalProgram
    , PythonHS.CLI
    , PythonHS.Evaluator
    , PythonHS.Evaluator.EvalStatements
    , PythonHS.Evaluator.ShowPos
    , PythonHS.Evaluator.Env
    , PythonHS.Evaluator.Value
    , PythonHS.Evaluator.FuncEnv
    , PythonHS.Structure.CheckStructure
    , PythonHS.Structure.CheckStructureViolations
  other-modules:
      PythonHS.CLI.ProcessSubmission
    , PythonHS.CLI.ProcessVmSubmission
    , PythonHS.CLI.ReplEvalLines
    , PythonHS.CLI.RunFile
    , PythonHS.CLI.StartRepl
    , PythonHS.Lexer.ScanTokenStep
    , PythonHS.Parser.ParseExpr
    , PythonHS.Parser.ParseStatement
    , PythonHS.Parser.ParseIfTail
    , PythonHS.Parser.ParseImportStmt
    , PythonHS.Structure.CheckStructureWarnings
    , PythonHS.Evaluator.ValueToOutput
    , PythonHS.Evaluator.ValueToReplOutput
    , PythonHS.Evaluator.RangeValues
    , PythonHS.Evaluator.EvalWhileStmt
    , PythonHS.Evaluator.EvalForStmt
    , PythonHS.Evaluator.EvalExpr
    , PythonHS.Evaluator.EvalExprBinary
    , PythonHS.Evaluator.EvalCallExpr
    , PythonHS.Evaluator.EvalBuiltinExpr
    , PythonHS.Evaluator.MaxLoopIterations
    , PythonHS.Runner.RunnerEngine
    , PythonHS.Runner.ResolveRunnerEngine
    , PythonHS.Runner.RunSourceWithEngine
    , PythonHS.VM.CallBuiltin
    , PythonHS.VM.CallCollectionBuiltin
    , PythonHS.VM.CallMathBuiltin
    , PythonHS.VM.BindCallArguments
    , PythonHS.VM.CompileCallArgsAt
    , PythonHS.VM.CompileDefaults
    , PythonHS.VM.CompileExprItemsAt
    , PythonHS.VM.CompileImportStmt
    , PythonHS.VM.EvalBinaryOp
    , PythonHS.VM.ResolveLocalImports
    , PythonHS.VM.TransformImportAliases
    , PythonHS.VM.CollectFunctionGlobalDecls
    , PythonHS.VM.EvaluateBuiltinArgs
    , PythonHS.VM.EvaluateUserArgs
    , PythonHS.VM.ExprPosition
    , PythonHS.VM.FirstKeywordArg
    , PythonHS.VM.StmtPosition
    , PythonHS.VM.Instruction
    , PythonHS.VM.IsTruthy
    , PythonHS.VM.ToForIterable
    , PythonHS.VM.ToPairs
    , PythonHS.VM.CompileProgram
    , PythonHS.VM.RunInstructions
  build-depends:
      base >=4.14 && <5
    , containers >=0.6 && <0.9
    , directory
    , filepath
    , haskeline
  default-language:    GHC2024
  ghc-options:         -Wall

executable python-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base >=4.14 && <5
    , python-hs
  default-language:    GHC2024
  ghc-options:         -Wall

executable check-structure
  hs-source-dirs:      app/check-structure
  main-is:             Main.hs
  build-depends:
      base >=4.14 && <5
    , python-hs
  default-language:    GHC2024
  ghc-options:         -Wall

executable check-runner-case-coverage
  hs-source-dirs:      app/check-runner-case-coverage
  main-is:             Main.hs
  build-depends:
      base >=4.14 && <5
    , python-hs
  default-language:    GHC2024
  ghc-options:         -Wall

test-suite python-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  autogen-modules:
      Paths_python_hs
  other-modules:
      Test.Acceptance.MvpScenarioSpec
    , Paths_python_hs
    , Test.Lexer.ScanTokensCoreSpec
    , Test.Lexer.ScanTokensIndentSpec
    , Test.Parser.ParseProgramSpec
    , Test.Parser.ParserErrorSpec
    , Test.Eval.EvalSpec
    , Test.Eval.FunctionEvalSpec
    , Test.Eval.RuntimeErrorSpec
    , Test.Runner.RunnerCoreSpec
    , Test.Runner.RunnerEdgeSpec
    , Test.Runner.RunnerCaseCoverageReportSpec
    , Test.Runner.RunnerCaseCoverageHasMissingSpec
    , Test.Runner.RunnerVmParitySpec
    , Test.CLI.CLISpec
    , Test.VM.RunSourceVmSpec
    , Test.Structure.CheckStructureSpec
  build-depends:
      base >=4.14 && <5
    , hspec >=2.7 && <3
    , directory
    , filepath
    , process
    , temporary
    , python-hs
  -- prefer modern field to avoid deprecation warning
  build-tool-depends:
    hspec-discover:hspec-discover
    , python-hs:python-hs
    , python-hs:check-runner-case-coverage
  default-language:    GHC2024
  ghc-options:         -Wall
